--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -71,15 +71,6 @@ jobs:
         name: macos-executable
         path: ${{ runner.temp }}/artifacts
 
-    - name: Create source tarball
-      run: |
-        set -eu
-        # Create a tar.gz of the repository contents (exclude the .git directory)
-        TAR_NAME="typespeed-source-${{ github.sha }}.tar.gz"
-        tar --exclude='.git' -czf "$RUNNER_TEMP/artifacts/$TAR_NAME" -C "$GITHUB_WORKSPACE" .
-        echo "Created $TAR_NAME"
-      shell: bash
-
     - name: Create GitHub Release
       id: create_release
       uses: actions/create-release@v1
@@ -87,21 +78,11 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: v${{ github.run_number }}
-        release_name: Release ${{ github.run_number }}
+        release_name: Release v${{ github.run_number }}
         body: |
           Automated release created after successful CI run ${{ github.run_id }} on branch ${{ github.ref_name }}.
         draft: false
         prerelease: false
-
-    - name: Upload source tarball to release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ runner.temp }}/artifacts/typespeed-source-${{ github.sha }}.tar.gz
-        asset_name: typespeed-source-${{ github.sha }}.tar.gz
-        asset_content_type: application/gzip
 
     - name: Upload macOS executable to release
       uses: actions/upload-release-asset@v1
@@ -110,5 +91,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ${{ runner.temp }}/artifacts/typespeed-macos-executable
-        asset_name: typespeed-macos-{{ runner.os }}-executable
+        asset_name: typespeed-macos-v{{ github.run_number }}-executable
         asset_content_type: application/octet-stream
